<resources>
    <string name="app_name">Quick Discharge Ver 1.0</string>

    <string name="battery_power">"Battery power = %d/100"</string>
    <string name="technology">"Technology: %s"</string>
    <string name="temperature">"Temperature: %1d℃/%2d℉</string>
    <string name="status">"Status: %s"</string>
    <string name="plugged">"Plugged: %s"</string>
    <string name="health">"Health: %s"</string>
    <string name="voltage">"Voltage: %dmV"</string>
    <string name="goals_battery">"Goals battery = %s"</string>
    <string name="high_cpu_load">High CPU load</string>
    <string name="camera_light">Camera light</string>
    <string name="high_brightness_display">High brightness display</string>
    <string name="gps_receivers">GPS receivers</string>
    <string name="operated_vibrator">Operated vibrator</string>
    <string name="network_connection">Network connection</string>
    <string name="discharging">Discharging</string>
    <string name="measurement_time">During the remaining time measurement</string>
    <string name="battery_status_charging">Charging</string>
    <string name="battery_status_discharging">Discharging</string>
    <string name="battery_status_full">Full</string>
    <string name="battery_status_not_charging">Not charging</string>
    <string name="battery_plugged_ac">AC</string>
    <string name="battery_plugged_usb">USB</string>
    <string name="battery_plugged_wireless">Wireless</string>
    <string name="battery_health_cold">Cold</string>
    <string name="battery_health_dead">Dead</string>
    <string name="battery_health_good">Good</string>
    <string name="battery_health_over_heat">Over heat</string>
    <string name="battery_health_over_voltage">Over voltage</string>
    <string name="battery_health_unspecified_failure">Unspecified failure</string>
    <string name="exit_tip">The device is discharging, are you sure you need to exit the application?</string>
    <string name="grant_location_permission_tip">Please grant targeting permission first</string>
    <string name="turn_on_gps_tip">Please turn on positioning first</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="unknow">Unknown</string>

</resources>