<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16_dp"
            android:layout_marginLeft="@dimen/margin_8_dp"
            android:layout_marginRight="@dimen/margin_8_dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_26_sp" />

        <SurfaceView
            android:id="@+id/surface_view"
            android:layout_width="@dimen/surface_view_width"
            android:layout_height="@dimen/surface_view_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_16_dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/battery_power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/battery_power_normal_color"
                android:textSize="@dimen/text_size_24_sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/technology"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/battery_info_text_color" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/battery_info_text_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/battery_info_text_color" />

                <TextView
                    android:id="@+id/plugged"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/battery_info_text_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/health"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/battery_info_text_color" />

                <TextView
                    android:id="@+id/voltage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/battery_info_text_color" />

            </LinearLayout>

            <TextView
                android:id="@+id/goals_battery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/discharge_level_text_color"
                android:textSize="@dimen/text_size_13_sp" />

            <SeekBar
                android:id="@+id/level_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8_dp"
                android:max="100"
                android:progress="0"
                android:progressBackgroundTint="@color/seekbar_bg_tint" />

            <CheckBox
                android:id="@+id/high_cpu_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_cpu_load"
                android:textColor="@color/battery_info_text_color" />

            <CheckBox
                android:id="@+id/camera_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_light"
                android:textColor="@color/battery_info_text_color" />

            <CheckBox
                android:id="@+id/high_brightness_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_brightness_display"
                android:textColor="@color/battery_info_text_color" />

            <CheckBox
                android:id="@+id/gps_receivers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_receivers"
                android:textColor="@color/battery_info_text_color" />

            <CheckBox
                android:id="@+id/operateed_vibrator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operated_vibrator"
                android:textColor="@color/battery_info_text_color" />

            <CheckBox
                android:id="@+id/network_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_connection"
                android:textColor="@color/battery_info_text_color" />

            <ToggleButton
                android:id="@+id/discharging"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16_dp"
                android:textAllCaps="false"
                android:textOff="@string/discharging"
                android:textOn="@string/discharging" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>